Port Oracle procedure call
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@9934 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/model/pom.xml
+++ b/APP/model/pom.xml
@@ -143,6 +143,7 @@
                             <schemaDirectory>${project.basedir}/src/main/resources/contract</schemaDirectory>
                             <extension>true</extension>
                             <args>
+                                <arg>-XtoString</arg>
                                 <arg>-Xsetters</arg>
                                 <arg>-Xvalue-constructor</arg>
                                 <arg>-Xsetters-mode=direct</arg>
