Maven config added database.dialect , default is oracle also merged properties file together
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@9981 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -49,6 +49,7 @@
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
+        <database.dialect>oracle</database.dialect>
     </properties>
 
     <dependencyManagement>
