--- a/APP/service/src/main/resources/config.properties
+++ b/APP/service/src/main/resources/config.properties
@@ -3,3 +3,6 @@ module.name=${spatial.name}
 
 #USM related properties
 usm_deployment_descriptor_force_update=${usm_deployment_descriptor_force_update}
+
+#Database dialect
+database.dialect=${database.dialect}
