Maven config added database.dialect , default is oracle also merged properties file together
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@9982 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/service/pom.xml
+++ b/APP/service/pom.xml
@@ -239,7 +239,7 @@
             </properties>
         </profile>
         <profile>
-            <id>postgres</id>
+            <id>dialect</id>
             <properties>
                 <database.dialect>postgres</database.dialect>
             </properties>
