--- a/APP/service/pom.xml
+++ b/APP/service/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.reporting</groupId>
+            <artifactId>reporting-model</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
         </dependency>
