--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
         <spatial.model>0.4.2-SNAPSHOT</spatial.model>
+        <reporting.model>0.4.2-SNAPSHOT</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javaee.version>7.0</javaee.version>
@@ -55,6 +56,13 @@
     <dependencyManagement>
 
         <dependencies>
+
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms.reporting</groupId>
+                <artifactId>reporting-model</artifactId>
+                <version>${reporting.model}</version>
+            </dependency>
+
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
                 <artifactId>spatial-model</artifactId>
