--- a/service/pom.xml
+++ b/service/pom.xml
@@ -244,7 +244,7 @@
             </properties>
         </profile>
         <profile>
-            <id>dialect</id>
+            <id>postgres</id>
             <properties>
                 <database.dialect>postgres</database.dialect>
             </properties>
