changing the artifact names to be able to distinguish between Oracle and Postgres releases
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@11595 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -513,6 +513,15 @@
             <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
         </repository>
     </repositories>
+	
+	<profiles>
+		<profile>
+            <id>postgres</id>
+            <properties>
+                <database.dialect>postgres</database.dialect> <!-- the record -->
+            </properties>
+        </profile>
+	</profiles>
 
     <modules>
         <module>rest</module>
