--- a/APP/deploy/pom.xml
+++ b/APP/deploy/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>deploy</artifactId>
-    <name>${project.parent.artifactId}-deploy</name>
+    <name>${project.parent.artifactId}-${database.dialect}-deploy</name>
     <packaging>ear</packaging>
 
     <parent>
@@ -116,6 +116,10 @@
                 </plugins>
             </build>
         </profile>
+
+       
+       
+
     </profiles>
 
 </project>
