--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14-M1</geotools.version>
         <uvms.commons.version>2.0.5-SNAPSHOT</uvms.commons.version>
+        <uvms.test.version>0.0.1-SNAPSHOT</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
         <usm4uvms.version>1.0.3</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
@@ -85,6 +86,13 @@
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>uvms-commons</artifactId>
                 <version>${uvms.commons.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms</groupId>
+                <artifactId>uvms-test</artifactId>
+                <version>${uvms.test.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
