--- a/pom.xml
+++ b/pom.xml
@@ -472,9 +472,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.sonar</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>5.1</version>
+                <groupId>org.codehaus.sonar-plugins.java</groupId>
+                <artifactId>sonar-java-plugin</artifactId>
+                <version>3.2</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
