--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -37,8 +37,8 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-test</artifactId>
         </dependency>
 
         <dependency>
