maven test  dependencies
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@11656 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/rest/pom.xml
+++ b/APP/rest/pom.xml
@@ -37,8 +37,8 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-test</artifactId>
         </dependency>
 
         <dependency>
