--- a/APP/message/pom.xml
+++ b/APP/message/pom.xml
@@ -15,8 +15,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-test</artifactId>
         </dependency>
 
         <dependency>
@@ -38,11 +38,6 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>spatial-model</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
         </dependency>
 
         <dependency>
