--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -155,6 +155,13 @@
             </dependency>
 
             <dependency>
+                <groupId>com.vividsolutions</groupId>
+                <artifactId>jts</artifactId>
+                <version>1.13</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
