fix linkage error
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@11682 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -153,6 +153,13 @@
                 <artifactId>jts2geojson</artifactId>
                 <version>0.7.0</version>
             </dependency>
+            <!-- don't delete needed for org.wololo -->
+            <dependency>
+                <groupId>com.vividsolutions</groupId>
+                <artifactId>jts</artifactId>
+                <version>1.13</version>
+                <scope>provided</scope>
+            </dependency>
 
             <dependency>
                 <groupId>commons-io</groupId>
