--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
                 <artifactId>jts2geojson</artifactId>
                 <version>0.7.0</version>
             </dependency>
+            <!-- don't delete needed for org.wololo -->
+            <dependency>
+                <groupId>com.vividsolutions</groupId>
+                <artifactId>jts</artifactId>
+                <version>1.13</version>
+                <scope>provided</scope>
+            </dependency>
 
             <dependency>
                 <groupId>commons-io</groupId>
