UNIONVMS-1477 Running report fails when user is restricted to a dataset
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@11979 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/model/pom.xml
+++ b/APP/model/pom.xml
@@ -148,6 +148,8 @@
                                 <arg>-Xvalue-constructor</arg>
                                 <arg>-Xsetters-mode=direct</arg>
                                 <arg>-Xannotate</arg>
+                                <arg>-Xequals</arg>
+                                <arg>-XhashCode</arg>
                             </args>
 
                             <plugins>
