--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
         <spatial.model>0.5.1-SNAPSHOT</spatial.model>
-        <reporting.model>0.5.0</reporting.model>
+        <reporting.model>0.5.1-SNAPSHOT</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javaee.version>7.0</javaee.version>
@@ -45,7 +45,7 @@
         <uvms.commons.version>2.0.6-SNAPSHOT</uvms.commons.version>
         <uvms.test.version>0.0.1-SNAPSHOT</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>1.0.3</usm4uvms.version>
+        <usm4uvms.version>2.0.3-SNAPSHOT</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
