--- a/message/pom.xml
+++ b/message/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>uvms-test</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -45,6 +46,7 @@
             <artifactId>movement-model</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
