1. Reference data settings added to MapConfig. 2. Updated admin and user save/update, reset APIs.
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@12623 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/message/pom.xml
+++ b/APP/message/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>uvms-test</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -45,6 +46,7 @@
             <artifactId>movement-model</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
