change profile name
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@12804 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -17,7 +17,7 @@
     <profiles>
 
         <profile>
-            <id>oracle-local</id>
+            <id>oracle</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -33,7 +33,7 @@
         </profile>
         
         <profile>
-            <id>postgres-local</id>
+            <id>postgres</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
