introduce datasets for each Service Layer
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@12830 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/model/pom.xml
+++ b/APP/model/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>logback-core</artifactId>
             <version>${logback.core.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>usm4uvms</artifactId>
+            <version>2.0.11-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
