--- a/model/pom.xml
+++ b/model/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>spatial-model</artifactId>
     <name>spatial-model</name>
     <packaging>ejb</packaging>
-    <version>0.5.2-SNAPSHOT</version>
+    <version>0.5.2</version>
     <description>This module shall have interfaces, XSD, and DTOs</description>
 
     <properties>
@@ -106,7 +106,7 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial/APP/model</connection>
+        <connection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/Spatial/spatial-model-0.5.2</connection>
     </scm>
 
     <profiles>
