--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
-        <spatial.model>0.5.2-SNAPSHOT</spatial.model>
-        <reporting.model>0.5.2-SNAPSHOT</reporting.model>
+        <spatial.model>0.5.2</spatial.model>
+        <reporting.model>0.5.2</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javaee.version>7.0</javaee.version>
@@ -42,10 +42,10 @@
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14-M1</geotools.version>
-        <uvms.commons.version>2.0.9-SNAPSHOT</uvms.commons.version>
-        <uvms.test.version>0.0.2-SNAPSHOT</uvms.test.version>
+        <uvms.commons.version>2.0.9</uvms.commons.version>
+        <uvms.test.version>0.0.2</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>2.0.3-SNAPSHOT</usm4uvms.version>
+        <usm4uvms.version>2.0.3</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
