--- a/service/pom.xml
+++ b/service/pom.xml
@@ -147,13 +147,40 @@
 
     <profiles>
         <profile>
+            <id>pitest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>1.1.10</version>
+                        <configuration>
+                            <verbose>true</verbose>
+                            <avoidCallsTo>
+                                <avoidCallsTo>java.util.logging</avoidCallsTo>
+                                <avoidCallsTo>org.apache.log4j</avoidCallsTo>
+                                <avoidCallsTo>org.slf4j</avoidCallsTo>
+                                <avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
+                            </avoidCallsTo>
+                            <targetClasses>
+                                <param>eu.europa.ec.fisheries.uvms.spatial.dao.Eez*</param>
+                            </targetClasses>
+                            <targetTests>
+                                <param>eu.europa.ec.fisheries.uvms.spatial.dao.Eez*</param>
+                            </targetTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>dev</id>
             <properties>
                 <usm_deployment_descriptor_force_update>true</usm_deployment_descriptor_force_update>
             </properties>
         </profile>
     </profiles>
-
     <build>
 
         <finalName>${project.name}-${project.version}</finalName>
@@ -165,15 +192,6 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>**/*ITest.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -202,21 +220,8 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>1.1.6</version>
-                <configuration>
-                    <targetClasses>
-                        <param>eu.europa.ec.fisheries.uvms.spatial.service.mapper.*</param>
-                    </targetClasses>
-                    <targetTests>
-                        <param>eu.europa.ec.fisheries.uvms.spatial.service.mapper.*</param>
-                    </targetTests>
-                </configuration>
-            </plugin>
-
         </plugins>
+
         <pluginManagement>
             <plugins>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
