--- a/service/pom.xml
+++ b/service/pom.xml
@@ -198,6 +198,7 @@
                 <version>1.1.10</version>
                 <configuration>
                     <verbose>true</verbose>
+                    <failWhenNoMutations>true</failWhenNoMutations>
                     <avoidCallsTo>
                         <avoidCallsTo>java.util.logging</avoidCallsTo>
                         <avoidCallsTo>org.apache.log4j</avoidCallsTo>
