git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@14006 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/deploy/pom.xml
+++ b/APP/deploy/pom.xml
@@ -145,6 +145,7 @@
 						<version>2.7</version>
 						<configuration>
 							<defaultLibBundleDir>APP-INF/lib</defaultLibBundleDir>					
+							<skinnyWars>true</skinnyWars>							
 							<modules>
 							 <ejbModule>
 									<groupId>${project.groupId}</groupId>
