git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@14015 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -420,8 +420,8 @@
 				<properties>
 					<database.dialect>oracle</database.dialect> <!-- the record -->
 					<configDirectory>${basedir}/../container-conf/oracle</configDirectory>
-					<webappSourceDirectory>${basedir}/../deploy/src/main/application/META-INF</webappSourceDirectory>
-					
+					<earSourceDirectory>${basedir}/../deploy/src/main/application/META-INF</earSourceDirectory>
+				
 				</properties>				
 					<dependencies>				
 						
