[maven-release-plugin]prepare release spatial-0.5.5
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@14159 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/deploy/pom.xml
+++ b/APP/deploy/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>0.5.5-SNAPSHOT</version>
+        <version>0.5.5</version>
     </parent> 
 
     <build>
@@ -156,7 +156,7 @@
 									<groupId>eu.europa.ec.fisheries.uvms</groupId>
 									<artifactId>usm4uvms</artifactId>		   
 									<bundleDir>/</bundleDir>					
-								</jarModule >						
+								</jarModule>						
 							</modules>
 						</configuration>
 					</plugin>
