--- a/APP/model/pom.xml
+++ b/APP/model/pom.xml
@@ -183,7 +183,7 @@
     </profiles>
 
     <build>
-        <finalName>${project.parent.artifactId}-model-${project.version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
