fixing build for case sensitive OS such as Linux

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,6 @@
     </build>
 
     <modules>
-        <module>liquibase</module>
+        <module>LIQUIBASE</module>
     </modules>
 </project>
